# swagger.json
@@ -1,21 +1,225 @@
 {
-	"openapi": "3.0.2",
+	"openapi": "3.0.3",
 	"info": {
-		"version": "0.0.1",
+		"version": "1.0.0",
+		"title": "SICAPIN Backend Rest Api",
 		"description": "backend rest api for SICAPIN apps"
 	},
-	"servers": [{ "url": "http://localhost:1945/api/v1", "description": "local development" }],
+	"servers": [
+		{ "url": "http://localhost:1945/api/v1", "description": "local development" },
+		{ "url": "https://sicapin-backend-rest-api.herokuapp.com", "description": "production" }
+	],
 	"paths": {
 		"/auth/register": {
 			"post": {
 				"tags": ["Authentication"],
-				"responses": {}
+				"requestBody": {
+					"required": true,
+					"content": {
+						"aplication/json": {
+							"schema": {
+								"$ref": "#/components/schemas/userRequestBody"
+							},
+							"examples": {
+								"edi": {
+									"summary": "user edi",
+									"value": {
+										"full_name": "edi supeno",
+										"user_class": "kelas 12",
+										"email": "edi@gmail.com",
+										"password": "edi123"
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "success register user",
+						"content": {
+							"aplication/json": {
+								"schema": {
+									"$ref": "#/components/schemas/userResponse"
+								},
+								"example": {
+									"status": "success",
+									"data": {
+										"full_name": "edi supeno",
+										"user_class": "kelas 12",
+										"email": "edi@gmail.com",
+										"password": "$2b$10$rCyNzshTKP/JGsskrR6.3O0EjeR1xmQOYglrvONRMJbTJ1168skcW"
+									},
+									"errors": null
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "failed register user",
+						"content": {
+							"aplication/json": {
+								"schema": {
+									"$ref": "#/components/schemas/userResponse"
+								},
+								"example": {
+									"status": "data send not valid",
+									"data": null,
+									"errors": [
+										{
+											"message": "\"full_name\" is required",
+											"field": "full_name"
+										},
+										{
+											"message": "\"user_class\" is required",
+											"field": "user_class"
+										},
+										{
+											"message": "\"email\" is required",
+											"field": "email"
+										},
+										{
+											"message": "\"password\" is required",
+											"field": "password"
+										}
+									]
+								}
+							}
+						}
+					}
+				}
 			}
 		},
 		"/auth/login": {
 			"post": {
 				"tags": ["Authentication"],
-				"responses": {}
+				"requestBody": {
+					"required": true,
+					"content": {
+						"aplication/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"full_name": {
+										"type": "string"
+									},
+									"password": {
+										"type": "string"
+									}
+								}
+							},
+							"examples": {
+								"edi": {
+									"summary": "user edi",
+									"value": {
+										"full_name": "edi supeno",
+										"password": "edi123"
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "success login user",
+						"content": {
+							"aplication/json": {
+								"schema": {
+									"$ref": "#/components/schemas/userResponse"
+								},
+								"example": {
+									"status": "success",
+									"data": {
+										"full_name": "edi supeno",
+										"user_class": "kelas 12",
+										"email": "edi@gmail.com",
+										"password": "$2b$10$rCyNzshTKP/JGsskrR6.3O0EjeR1xmQOYglrvONRMJbTJ1168skcW"
+									},
+									"errors": null
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "failed login user",
+						"content": {
+							"aplication/json": {
+								"schema": {
+									"$ref": "#/components/schemas/userResponse"
+								},
+								"example": {
+									"status": "data send not valid",
+									"data": null,
+									"errors": [
+										{
+											"message": "\"full_name\" is required",
+											"field": "full_name"
+										},
+										{
+											"message": "\"password\" is required",
+											"field": "password"
+										}
+									]
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "failed login user, wrong name or password",
+						"content": {
+							"aplication/json": {
+								"schema": {
+									"$ref": "#/components/schemas/userResponse"
+								},
+								"example": {
+									"status": "invalid user login",
+									"data": null,
+									"errors": "wrong name or password"
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	},
+	"components": {
+		"schemas": {
+			"userRequestBody": {
+				"type": "object",
+				"properties": {
+					"full_name": {
+						"type": "string"
+					},
+					"user_class": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": ["full_name", "user_class", "email", "password"]
+			},
+			"userResponse": {
+				"type": "object",
+				"properties": {
+					"status": {
+						"type": "string"
+					},
+					"data": {
+						"type": "object"
+					},
+					"errors": {
+						"type": "array",
+						"items": {
+							"type": "object"
+						}
+					}
+				}
 			}
 		}
 	}
